@@ -17,6 +17,33 @@
         <ttlab.typesystem.version>3.0.3</ttlab.typesystem.version>
     </properties>
 
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.0</version>
+            <configuration>
+                <argLine>
+                    --illegal-access=permit
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                    <!--                        add-opens for use in JUnit-Tests...-->
+                </argLine>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.22.0</version>
+            <configuration>
+                <argLine>
+                    --illegal-access=permit
+                </argLine>
+            </configuration>
+        </plugin>
+        </plugins>
+    </build>
+
     <repositories>
         <repository>
             <id>jitpack.io</id>
